Refactor classes for JavaFX